# ostool

./: Cargo.toml  README.en.md  README.md
.github/workflows/: check.yaml  deploy.yml  release.yml
fitimage/: CHANGELOG.md  Cargo.toml  README.md
fitimage/src/: error.rs  lib.rs
fitimage/src/compression/: gzip.rs  mod.rs  traits.rs
fitimage/src/fit/: config.rs  fdt_header.rs  mod.rs
jkconfig/: CHANGELOG.md  Cargo.toml
jkconfig/src/: lib.rs  run.rs
jkconfig/src/data/: app_data.rs  item.rs  menu.rs  mod.rs  oneof.rs  schema.rs  types.rs
ostool/: CHANGELOG.md  Cargo.toml
ostool/src/: ctx.rs  lib.rs  menuconfig.rs  utils.rs
ostool/src/run/: mod.rs  qemu.rs  tftp.rs
ostool/src/sterm/: mod.rs
uboot-shell/: CHANGELOG.md  Cargo.toml  README.md
uboot-shell/src/: crc.rs  lib.rs  ymodem.rs
