[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["command-line-interface", "config"]
description = "A Cursive-based TUI component library for JSON Schema configuration"
documentation = "https://docs.rs/jkconfig"
edition = "2024"
keywords = ["tui", "config", "json-schema", "terminal"]
license = "MIT OR Apache-2.0"
name = "jkconfig"
readme = "README.md"
repository = "https://github.com/ZR233/ostool"
version = "0.1.5"

[[bin]]
name = "jkconfig"
path = "src/main.rs"
required-features = ["web"]

[dependencies]
# Cursive TUI framework
cursive = {workspace = true, features = ["crossterm-backend"]}

# Data processing
anyhow = {workspace = true}
clap = {workspace = true, features = ["derive"]}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
schemars = {workspace = true, features = ["derive"]}
cargo_metadata = "0.23"
toml = {workspace = true}

# Error handling
thiserror = {workspace = true}

# Logging
log = {workspace = true}

# Web server dependencies (optional)
axum = {version = "0.8", optional = true}
chrono = {version = "0.4", optional = true}
tokio = {version = "1.0", features = ["full"], optional = true}
tower = {version = "0.5", optional = true}
tower-http = {version = "0.6", features = ["fs", "cors"], optional = true}

[features]
default = ["web"]
web = ["axum", "tokio", "tower", "tower-http", "chrono"]
logging = []

[dev-dependencies]
env_logger = "0.11"
schemars = {workspace=true, features = ["derive"]}
tokio-test = "0.4"
