[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["command-line-utilities", "embedded", "development-tools"]
description = "A tool for operating system development"
documentation = "https://docs.rs/ostool"
edition = "2024"
keywords = ["os", "embedded", "qemu", "u-boot", "bootloader"]
license = "MIT OR Apache-2.0"
name = "ostool"
readme = "../README.md"
repository = "https://github.com/ZR233/ostool"
version = "0.8.9"

[package.metadata.binstall]
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }-v{ version }{ archive-suffix }"

[[bin]]
name = "ostool"
path = "src/main.rs"

[[bin]]
name = "cargo-osrun"
path = "src/bin/cargo-osrun.rs"

[features]
ui-log = ["jkconfig/logging"]

[dependencies]
anyhow = {workspace = true, features = ["backtrace"]}
byte-unit = "5.1"
cargo_metadata = "0.23"
clap = {workspace = true, features = ["derive"]}
colored = "3"
crossterm = {workspace = true}
cursive = {workspace = true, features = ["crossterm-backend"]}
env_logger = {workspace = true}
fitimage = {version = "0.1", path = "../fitimage"}
futures = "0.3"
indicatif = "0.18"
jkconfig = {version = "0.1", path = "../jkconfig"}
log = {workspace = true}
network-interface = "2"
object = "0.37"
ratatui = "0.29"
reqwest = {version = "0.12", default-features = false, features = ["rustls-tls"]}
schemars = {workspace = true, features = ["derive"]}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
serialport = "4.6"
tftpd = "0.5"
tokio = {workspace = true, features = ["full"]}
toml = {workspace = true}
uboot-shell = {version = "0.2", path = "../uboot-shell"}

lzma-rs = "0.3"
regex = "1"
sha2 = "0.10"
tar = "0.4"
ureq = "3.0"
